Added tags and adding tags to the bookmarks index

--- a/app/views/bookmarks/index.html.erb
+++ b/app/views/bookmarks/index.html.erb
@@ -67,6 +67,8 @@
           <th scope="col">FEN</th>
           <th scope="col">Pieces</th>
           <th scope="col">Bookmarked at</th>
+          <th scope="col">Tags</th>
+          <th scope="col"></th>
           <th scope="col"></th>
           <th scope="col"></th>
         </tr>
@@ -76,8 +78,20 @@
           <tr>
             <td><%= a_bookmark.position.fen %></td>
             <td><%= a_bookmark.position.pieces %></td>
-
             <td><%= time_ago_in_words(a_bookmark.created_at) %> ago</td>
+            <td>
+              <% a_bookmark.tags.each do |a_tag| %>
+                <a href="/tags/<%= a_tag.id %>" class="badge badge-pill badge-light"><%= a_tag.name %></span>
+              <% end %>
+            </td>
+            <td>
+            <form class="form-inline" action="/insert_tag" method="post">
+              <input type="hidden" id="bookmark_box" name="query_bookmark_id" value="<%= a_bookmark.id %>">
+              <input type="hidden" id="user_box" name="query_user_id" value=<%= @current_user.id %>>
+              <input type="text" id="name_box" name="query_name" class="form-control bg-dark text-white" placeholder="Add a tag...">             
+              <button type="submit" class="btn btn-primary">Add tag</button>
+            </form>
+            </td>
             <td><a href="/bookmarks/<%= a_bookmark.id %>"><button class="btn btn-success">Show details</button></a></td>
             <td><a href="/delete_bookmark/<%= a_bookmark.id %>"><button class="btn btn-danger">Delete bookmark</button></a></td>
           </tr>
