--- a/app/views/positions/index.html.erb
+++ b/app/views/positions/index.html.erb
@@ -60,7 +60,7 @@
           <td><%= time_ago_in_words(a_position.updated_at)%> ago</td> -->
 
           <td>
-            <% if Bookmark.where({position_id: a_position.id}).count() == 0 %>
+            <% if Bookmark.where({position_id: a_position.id, user_id: @current_user.id}).count() == 0 %>
             <form action="/insert_bookmark" method="post">
               <input type="hidden" id="position_box" name="query_position_id" value="<%= a_position.id %>">
               <input type="hidden" id="user_box" name="query_user_id" value=<%= @current_user.id %>>
@@ -76,7 +76,7 @@
             </form>
             <% end %>
           </td>
-          <td><a href="/positions/<%= a_position.id %>"><button class="btn btn-success">Show details <i class="fas fa-arrow-right"></i></button></a></td>
+          <td><a href="/positions/<%= a_position.id %>"><button class="btn btn-success"><i class="fas fa-arrow-right"></i></button></a></td>
         </tr>
       <% end %>
     </table>
