--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -1,101 +1,80 @@
-<div>
+<div class="container-fluid">
   <div>
-    <h1>
-      Tag #<%= @the_tag.id %> details
+    <h1 class="text-white text-center">
+      <%= @tag_name %> tag
     </h1>
 
     <div>
       <div>
-        <a href="/tags">
+        <a href="/bookmarks">
           Go back
-        </a>
-      </div>
-
-      <div>
-        <a href="/delete_tag/<%= @the_tag.id %>">
-          Delete tag
         </a>
       </div>
     </div>
 
-    <dl>
-      <dt>
-        Bookmark
-      </dt>
-      <dd>
-        <%= @the_tag.bookmark_id %>
-      </dd>
-
-      <dt>
-        User
-      </dt>
-      <dd>
-        <%= @the_tag.user_id %>
-      </dd>
-
-      <dt>
-        Name
-      </dt>
-      <dd>
-        <%= @the_tag.name %>
-      </dd>
-
-      <dt>
-        Created at
-      </dt>
-      <dd>
-        <%= time_ago_in_words(@the_tag.created_at) %> ago
-      </dd>
-
-      <dt>
-        Updated at
-      </dt>
-      <dd>
-        <%= time_ago_in_words(@the_tag.updated_at) %> ago
-      </dd>
-    </dl>
   </div>
-</div>
 
-<hr>
-
-
-<div>
-  <div>
-    <h2>
-      Edit tag
-    </h2>
-
-    <form action="/modify_tag/<%= @the_tag.id %>"  method="post" >
-      <div>
-        <label for="bookmark_id_box">
-          Bookmark
-        </label>
-
-        <input type="text" id="bookmark_id_box" name="query_bookmark_id" value="<%= @the_tag.bookmark_id %>">
+  <div class = "row">
+    <div class = "col-md-6 offset-3 text-white bg-dark rounded">
+      <div class = "text-left mb-3 mt-3">
+        <h4>Your positions tagged <%= @tag_name %></h4>
       </div>
-
-      <div>
-        <label for="user_id_box">
-          User
-        </label>
-
-        <input type="text" id="user_id_box" name="query_user_id" value="<%= @the_tag.user_id %>">
-      </div>
-
-      <div>
-        <label for="name_box">
-          Name
-        </label>
-
-        <input type="text" id="name_box" name="query_name" value="<%= @the_tag.name %>">
-      </div>
-
-      <button>
-        Update tag
-      </button>
-    </form>
+    </div>
   </div>
+
+  <div class="mt-3 col-md-8 offset-2">
+    <table class="table table-striped table-dark">
+      <thead>
+        <tr>
+          <th scope="col">FEN</th>
+          <th scope="col">Pieces</th>
+          <th scope="col">Untag</th>
+          <th scope="col">Show details</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @users_matching_tags.each do |a_tag| %>
+          <tr>
+            <td><%= a_tag.bookmark.position.fen %></td>
+            <td><%= a_tag.bookmark.position.pieces %></td>
+            <td class="text-center"><a href="/delete_tag/<%= a_tag.id %>"><button class="btn btn-danger"><i class="fas fa-trash"></i></button></a></td>
+            <td class="text-center"><a href="/bookmarks/<%= a_tag.bookmark.id %>"><button class="btn btn-success"><i class="fas fa-arrow-right"></i></button></a></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+
+  <div class = "row">
+    <div class = "col-md-6 offset-3 text-white bg-dark rounded">
+      <div class = "text-left mb-3 mt-3">
+        <h4>Other users' positions tagged <%= @tag_name %></h4>
+      </div>
+    </div>
+  </div>
+
+  <div class="mt-3 col-md-8 offset-2">
+    <table class="table table-striped table-dark">
+      <thead>
+        <tr>
+          <th scope="col">FEN</th>
+          <th scope="col">Pieces</th>
+          <th scope="col">Show details</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @others_matching_tags.each do |a_tag| %>
+          <tr>
+            <td><%= a_tag.bookmark.position.fen %></td>
+            <td><%= a_tag.bookmark.position.pieces %></td>
+            <td class="text-center"><a href="/bookmarks/<%= a_tag.bookmark.id %>"><button class="btn btn-success"><i class="fas fa-arrow-right"></i></button></a></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+
+
 </div>
 
 <hr>
