More cleanup on homepage

--- a/app/views/trainer/homepage.html.erb
+++ b/app/views/trainer/homepage.html.erb
@@ -6,9 +6,10 @@
   </div>
 
   <div class="row mb-3">
-    <div class = "col-md-10 offset-1 text-white bg-dark rounded text-center">
+    <div class = "col-md-10 offset-1 text-white bg-secondary rounded text-center">
       <div class = "text-left mb-3 mt-3">
         <h3>Welcome to the RookLift endgame trainer!</h3>
+        <hr class="border-white">
         <p>This trainer will build a custom playlist of positions for you to train your chess endgames. To get started:</p>
         <ul>
           <li>Browse our library of endgame positions. You can also add endgames that you want to practice using their FEN</li>
@@ -54,7 +55,7 @@
   <div class="row">
     <div class = "col-md-10 offset-1 text-white bg-dark rounded text-center">
       <div class = "text-left mb-3 mt-3">
-        <h5>It looks like you don't have any tagged positions to train. Try browsing our endgame library, bookmarking positions that you want to practice, and tagging them. You can then make a training playlist of all positions in one or more of your tags!</h5>
+        <h5>It looks like you don't have any tagged positions to train. Try browsing our endgame library, bookmarking positions that you want to practice, and tagging them with a descriptive name (e.g., "pawn endgames"). You can then make a training playlist of all positions in one or more of your tags to practice against the computer!</h5>
       </div>
       <div class = "col-md-10 offset-1 text-white bg-dark rounded text-center mb-3">
         <a href="/positions" class="btn btn-primary btn-block mt-3 mb-3 font-weight-bold">
