--- a/app/views/trainer/homepage.html.erb
+++ b/app/views/trainer/homepage.html.erb
@@ -27,7 +27,10 @@
   <div class = "row">
     <div class = "col-md-10 offset-1 text-white bg-dark rounded text-center">
       <div class = "text-left mb-3 mt-3">
-        <h5>Use the checkboxes below to select the endgame tags you want to include in your training set</h5>
+        <h3>Build a training playlist!</h3>
+        <hr class="border-white">
+        <h5>Use the checkboxes below to select the endgame tags you want to include in your training set. You will be able to practice all of the positions within the tags you select against the computer.</h5>
+        <h5>Your tags:</h5>
       </div>
       
       <form action = "/trainer">
