Wired up basic API call (not FEN yet)

--- a/app/views/trainer/playlistPosition.html.erb
+++ b/app/views/trainer/playlistPosition.html.erb
@@ -51,7 +51,7 @@
     
 
     <div class="col-md-2 offset-1 background-color-black my-auto">
-      <a href="/"><button class="btn btn-danger btn-block text-white">Practice against the computer!</button></a>
+      <a href="/playComputer"><button class="btn btn-danger btn-block text-white">Practice against the computer!</button></a>
 
     </div>
 
