Some format changes to front page

--- a/app/views/trainer/homepage.html.erb
+++ b/app/views/trainer/homepage.html.erb
@@ -11,12 +11,12 @@
         <h3>Welcome to the RookLift endgame trainer!</h3>
         <hr class="border-white">
         <p>This trainer will build a custom playlist of positions for you to train your chess endgames. To get started:</p>
-        <ul>
-          <li>Browse our library of endgame positions. You can also add endgames that you want to practice using their FEN</li>
+        <ol>
+          <li>Browse our library of endgame positions by clicking "Browse endgames" at the top of your screen. You can add endgames that you want to practice by pasting their FEN into the form at the top of the page</li>
           <li>If you see an interesting position that you'd like to practice, bookmark it! This will create a library of bookmarked positions for you that you can manage</li>
           <li>Make a "playlist" of bookmarked endgames that you want to practice by "tagging" the bookmarked position (e.g., a tag could be "rook and pawn vs rook")</li>
-          <li>Once you have made one or more tags, you can make train your endgames by playing a random position from one or more tags against the computer on lichess.com!</li>
-        </ul>
+          <li>Once you have made one or more tags, you can make train your endgames by playing a random position from one or more tags against the computer!</li>
+        </ol>
       </div>
     </div>
   </div>
