--- a/app/views/trainer/playlistPosition.html.erb
+++ b/app/views/trainer/playlistPosition.html.erb
@@ -27,8 +27,8 @@
       <p><%= @curPosition.fen%></p>
       
       <hr class="border-white">
-      <a href="/trainRandom"><button class="btn btn-primary text-white mb-3">Train another position</button></a>
-      <div><a href="/"><button class="btn btn-success text-white">Return to homepage</button></a></div>
+      <a href="/trainRandom"><button class="btn btn-block btn-primary text-white mb-3">Train another position</button></a>
+      <div><a href="/"><button class="btn btn-block btn-success text-white">Return to homepage</button></a></div>
     </div>
 
 
@@ -50,9 +50,9 @@
     </div>
     
 
-    <div class="col-md-2 offset-1 background-color-black my-auto">
-      <a href="/playComputer"><button class="btn btn-danger btn-block text-white">Practice against the computer!</button></a>
-
+    <div class="col-md-2 offset-1 bg-dark my-auto">
+      <a href="/playComputerWhite"><button class="mt-3 btn bg-white btn-block text-black mb-3">Practice with the white pieces</button></a>
+      <a href="/playComputerBlack"><button class="btn btn-block black-background text-white border-white mb-3">Practice with the black pieces</button></a>
     </div>
 
 
