--- a/app/views/trainer/playlistPosition.html.erb
+++ b/app/views/trainer/playlistPosition.html.erb
@@ -51,8 +51,14 @@
     
 
     <div class="col-md-2 offset-1 bg-dark my-auto">
-      <a href="/playComputerWhite"><button class="mt-3 btn bg-white btn-block text-black mb-3">Practice with the white pieces</button></a>
-      <a href="/playComputerBlack"><button class="btn btn-block black-background text-white border-white mb-3">Practice with the black pieces</button></a>
+      <form action="/playComputerWhite" target="_blank">
+        <input type="hidden" id="fen_box" name="query_fen" value="<%= @curPosition.fen %>">
+        <button type="submit" class="mt-3 btn bg-white btn-block text-black mb-3">Practice with the white pieces</button>
+      </form>
+      <form action="/playComputerBlack" target="_blank">
+        <input type="hidden" id="fen_box" name="query_fen" value="<%= @curPosition.fen %>">
+        <button type="submit" class="btn btn-block black-background text-white border-white mb-3">Practice with the black pieces</button>
+      </form>
     </div>
 
 
