--- a/app/views/bookmarks/index.html.erb
+++ b/app/views/bookmarks/index.html.erb
@@ -59,13 +59,14 @@
 
   <hr>
 
-  <div>
-    <div>
+  <div class="row">
+    <div class="col-md-8 offset-2">
       <table class="table table-striped table-dark">
         <thead>
           <tr>
-            <th scope="col">FEN</th>
-            <th scope="col">Pieces</th>
+            <!--<th scope="col">FEN</th> -->
+            <th scope="col">Position</th>
+            <!-- <th scope="col">Pieces</th> -->
             <%# <th scope="col">Bookmarked at</th> %>
             <th scope="col">Tags</th>
             <th scope="col">Add tag</th>
@@ -73,30 +74,50 @@
             <th scope="col">Show details</th>
           </tr>
         </thead>
+        
+        
         <tbody>
           <% @list_of_bookmarks.each do |a_bookmark| %>
             <tr>
-              <td><%= a_bookmark.position.fen %></td>
-              <td><%= a_bookmark.position.pieces %></td>
-              <!-- <td><%= time_ago_in_words(a_bookmark.created_at) %> ago</td> -->
+              <!-- <td><%# a_bookmark.fetch("fen") %></td> -->
               <td>
-                <% a_bookmark.tags.each do |a_tag| %>
+                <table class="chessboardSmall">
+                  <% (0..7).each do |i| %>
+                    <tr class="chessboardSmall">
+                      <% (0..7).each do |j| %>
+                        <td class="chessboardSmall">
+                          <%# if rook render rook, etc. %>
+                          <% if a_bookmark.fetch("the_board")[i][j] != "blank" %>
+                            <img src="<%= a_bookmark.fetch("the_images")[i][j] %>" class="pieceSmall">
+                          <% end %>
+                        </td>
+                      <% end %>
+                    </tr>
+                  <% end %>
+                </table>
+              </td>
+
+              <!-- <td><%= a_bookmark.fetch("pieces") %></td> -->
+              <td>
+                <% a_bookmark.fetch("tags") do |a_tag| %>
                   <a href="/tags/<%= a_tag.name %>" class="badge badge-pill badge-light"><%= a_tag.name %></span>
                 <% end %>
               </td>
               <td>
               <form class="form-inline" action="/insert_tag" method="post">
-                <input type="hidden" id="bookmark_box" name="query_bookmark_id" value="<%= a_bookmark.id %>">
+                <input type="hidden" id="bookmark_box" name="query_bookmark_id" value="<%= a_bookmark.fetch("id") %>">
                 <input type="hidden" id="user_box" name="query_user_id" value="<%= @current_user.id %>">
                 <input type="text" id="name_box" name="query_name" class="form-control bg-dark text-white" placeholder="Add a tag...">             
                 <button type="submit" class="btn btn-primary">Add tag <i class="fas fa-tag"></i></button>
               </form>
               </td>
-              <td class="text-center"><a href="/delete_bookmark/<%= a_bookmark.id %>"><button class="btn btn-danger"><i class="fas fa-trash"></i></button></a></td>
-              <td class="text-center"><a href="/bookmarks/<%= a_bookmark.id %>"><button class="btn btn-success"><i class="fas fa-arrow-right"></i></button></a></td>
+              <td class="text-center"><a href="/delete_bookmark/<%= a_bookmark.fetch("id") %>"><button class="btn btn-danger"><i class="fas fa-trash"></i></button></a></td>
+              <td class="text-center"><a href="/bookmarks/<%= a_bookmark.fetch("id") %>"><button class="btn btn-success"><i class="fas fa-arrow-right"></i></button></a></td>
             </tr>
           <% end %>
         </tbody>
+
+
       </table>
     </div>
   </div>
