--- a/app/views/positions/index.html.erb
+++ b/app/views/positions/index.html.erb
@@ -35,51 +35,72 @@
 </div>
 
 <hr>
-  <div>
-    <table class="table table-striped table-dark">
-      <thead>
-        <tr>
-          <%# <th scope="col">ID</th> %>
-          <th scope="col">FEN</th>
-          <th scope="col">Endgame type</th>
-          <th scope="col">Pieces</th>
-          <%# <th scope="col">Created at</th>
-          <th scope="col">Updated at</th> %>
-          <th scope="col">Bookmark position</th>
-          <th scope="col">Show details</th>
-        </tr>
-      </thead>
-      <tbody>
-      <% @list_of_positions.each do |a_position| %>
-        <tr>
-          <!-- <td><%= a_position.id %></td> -->
-          <td><%= a_position.fen %></td>
-          <td><%= a_position.endgame_type %></td>
-          <td><%= a_position.pieces %></td>
-          <!-- <td><%= time_ago_in_words(a_position.created_at) %> ago</td>
-          <td><%= time_ago_in_words(a_position.updated_at)%> ago</td> -->
+  <div class="row">
+    <div class="col-md-8 offset-2">
+      <table class="table table-striped table-dark">
+        <thead>
+          <tr>
+            <%# <th scope="col">ID</th> %>
+            <!--<th scope="col">FEN</th> -->
+            <th scope="col">Position</th>
+            <th scope="col">Endgame type</th>
+            <th scope="col">Pieces</th>
+            <%# <th scope="col">Created at</th>
+            <th scope="col">Updated at</th> %>
+            <th scope="col">Bookmark position</th>
+            <th scope="col">Show details</th>
+          </tr>
+        </thead>
+        <tbody>
+        
+        
+          <% @list_of_positions.each do |a_position| %>
+            <tr>
+              <!-- <td><%# a_position.id %></td> -->
+              <td>
+                <table class="chessboardSmall">
+                  <% (0..7).each do |i| %>
+                    <tr class="chessboardSmall">
+                      <% (0..7).each do |j| %>
+                        <td class="chessboardSmall">
+                          <%# if rook render rook, etc. %>
+                          <% if a_position.fetch("the_board")[i][j] != "blank" %>
+                            <img src="<%= a_position.fetch("the_images")[i][j] %>" class="pieceSmall">
+                          <% end %>
+                        </td>
+                      <% end %>
+                    </tr>
+                  <% end %>
+                </table>
+              </td>
+              <td><%= a_position.fetch("endgame_type") %></td>
+              <td><%= a_position.fetch("pieces") %></td>
+              <!-- <td><%# time_ago_in_words(a_position.created_at) %> ago</td>
+              <td><%# time_ago_in_words(a_position.updated_at)%> ago</td> -->
 
-          <td>
-            <% if Bookmark.where({position_id: a_position.id, user_id: @current_user.id}).count() == 0 %>
-              <form action="/insert_bookmark" method="post">
-                <input type="hidden" id="position_box" name="query_position_id" value="<%= a_position.id %>">
-                <input type="hidden" id="user_box" name="query_user_id" value=<%= @current_user.id %>>
-                <input type="hidden" id="tag_box" name="query_tag_id" value="Untagged">             
-                <button type="submit" class="btn btn-primary mb-3">Bookmark position <i class="fas fa-bookmark"></i></button>
-              </form>
-            <% else %>
-              <form action="/insert_bookmark" method="post">
-                <input type="hidden" id="position_box" name="query_position_id" value="<%= a_position.id %>">
-                <input type="hidden" id="user_box" name="query_user_id" value=<%= @current_user.id %>>
-                <input type="hidden" id="tag_box" name="query_tag_id" value="Untagged">             
-                <button type="submit" class="btn btn-outline-primary mb-3" disabled>Position bookmarked <i class="fas fa-bookmark"></i> </button>
-              </form>
-            <% end %>
-          </td>
-          <td><a href="/positions/<%= a_position.id %>"><button class="btn btn-success"><i class="fas fa-arrow-right"></i></button></a></td>
-        </tr>
-      <% end %>
-    </table>
+              <td>
+                <% if Bookmark.where({position_id: a_position.fetch("id"), user_id: @current_user.id}).count() == 0 %>
+                  <form action="/insert_bookmark" method="post">
+                    <input type="hidden" id="position_box" name="query_position_id" value="<%= a_position.fetch("id") %>">
+                    <input type="hidden" id="user_box" name="query_user_id" value=<%= @current_user.id %>>
+                    <input type="hidden" id="tag_box" name="query_tag_id" value="Untagged">             
+                    <button type="submit" class="btn btn-primary mb-3">Bookmark position <i class="fas fa-bookmark"></i></button>
+                  </form>
+                <% else %>
+                  <form action="/insert_bookmark" method="post">
+                    <input type="hidden" id="position_box" name="query_position_id" value="<%= a_position.fetch("id") %>">
+                    <input type="hidden" id="user_box" name="query_user_id" value=<%= @current_user.id %>>
+                    <input type="hidden" id="tag_box" name="query_tag_id" value="Untagged">             
+                    <button type="submit" class="btn btn-outline-primary mb-3" disabled>Position bookmarked <i class="fas fa-bookmark"></i> </button>
+                  </form>
+                <% end %>
+              </td>
+              <td><a href="/positions/<%= a_position.fetch("id") %>"><button class="btn btn-success"><i class="fas fa-arrow-right"></i></button></a></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
   </div>
 </div>
 <hr>
