--- a/app/views/bookmarks/show.html.erb
+++ b/app/views/bookmarks/show.html.erb
@@ -13,7 +13,7 @@
   <div class = "row">
     
     <!-- table of info about the fen -->
-    <div class = "col-md-2 offset-1 text-white bg-dark rounded">
+    <div class = "col-md-3 offset-1 text-white bg-dark rounded">
       <div class = "text-left mb-3 mt-3">
         <div>
           <div><a href="/bookmarks"><button class="btn btn-success text-white">Go back</button></a></div>
@@ -70,10 +70,10 @@
     </div>
 
 
-  <div class="col-md-2 offset-1 bg-dark my-auto">
+    <div class="col-md-1 offset-1 bg-dark my-auto">
       <form action="/playComputerWhite" target="_blank">
         <input type="hidden" id="fen_box" name="query_fen" value="<%= @the_position.fen %>">
-        <button type="submit" class="mt-3 btn bg-white btn-block text-black mb-3">Practice with the white pieces</button>
+        <button type="submit" class="mt-3 btn btn-light btn-block text-black mb-3">Practice with the white pieces</button>
       </form>
       <form action="/playComputerBlack" target="_blank">
         <input type="hidden" id="fen_box" name="query_fen" value="<%= @the_position.fen %>">
