--- a/app/views/trainer/playlistPosition.html.erb
+++ b/app/views/trainer/playlistPosition.html.erb
@@ -53,7 +53,7 @@
     <div class="col-md-2 offset-1 bg-dark my-auto">
       <form action="/playComputerWhite" target="_blank">
         <input type="hidden" id="fen_box" name="query_fen" value="<%= @curPosition.fen %>">
-        <button type="submit" class="mt-3 btn bg-white btn-block text-black mb-3">Practice with the white pieces</button>
+        <button type="submit" class="mt-3 btn btn-light btn-block text-black mb-3">Practice with the white pieces</button>
       </form>
       <form action="/playComputerBlack" target="_blank">
         <input type="hidden" id="fen_box" name="query_fen" value="<%= @curPosition.fen %>">
