cleaned up tags

--- a/app/views/bookmarks/show.html.erb
+++ b/app/views/bookmarks/show.html.erb
@@ -16,7 +16,7 @@
     <div class = "col-md-3 offset-1 text-white bg-dark rounded">
       <div class = "text-left mb-3 mt-3">
         <div>
-          <div><a href="/bookmarks"><button class="btn btn-success text-white">Go back</button></a></div>
+          <div><a href="/bookmarks"><button class="btn btn-success text-white">Go to bookmarks library</button></a></div>
         </div>
       </div>
 
