--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -1,14 +1,12 @@
 <div class="container-fluid">
   <div>
     <h1 class="text-white text-center">
-      <%= @tag_name %> tag
+      Tag details: "<%= @tag_name %>"
     </h1>
 
     <div>
-      <div>
-        <a href="/bookmarks">
-          Go back
-        </a>
+      <div class="offset-3 mb-3">
+        <a href="/bookmarks"><button class="btn btn-success text-white">Go back</button></a>
       </div>
     </div>
 
@@ -17,17 +15,16 @@
   <div class = "row">
     <div class = "col-md-6 offset-3 text-white bg-dark rounded">
       <div class = "text-left mb-3 mt-3">
-        <h4>Your positions tagged <%= @tag_name %></h4>
+        <h4>Your positions tagged "<%= @tag_name %>"</h4>
       </div>
     </div>
   </div>
 
-  <div class="mt-3 col-md-8 offset-2">
+  <div class="mt-3 col-md-4 offset-4">
     <table class="table table-striped table-dark">
       <thead>
         <tr>
-          <th scope="col">FEN</th>
-          <th scope="col">Pieces</th>
+          <th scope="col">Position</th>
           <th scope="col">Untag</th>
           <th scope="col">Show details</th>
         </tr>
@@ -35,10 +32,24 @@
       <tbody>
         <% @users_matching_tags.each do |a_tag| %>
           <tr>
-            <td><%= a_tag.bookmark.position.fen %></td>
-            <td><%= a_tag.bookmark.position.pieces %></td>
-            <td class="text-center"><a href="/delete_tag/<%= a_tag.id %>"><button class="btn btn-danger"><i class="fas fa-trash"></i></button></a></td>
-            <td class="text-center"><a href="/bookmarks/<%= a_tag.bookmark.id %>"><button class="btn btn-success"><i class="fas fa-arrow-right"></i></button></a></td>
+            <td>
+              <table class="chessboardSmall">
+                  <% (0..7).each do |i| %>
+                    <tr class="chessboardSmall">
+                      <% (0..7).each do |j| %>
+                        <td class="chessboardSmall">
+                          <%# if rook render rook, etc. %>
+                          <% if a_tag.fetch("the_board")[i][j] != "blank" %>
+                            <img src="<%= a_tag.fetch("the_images")[i][j] %>" class="pieceSmall">
+                          <% end %>
+                        </td>
+                      <% end %>
+                    </tr>
+                  <% end %>
+                </table>
+            </td>
+            <td class="text-center"><a href="/delete_tag/<%= a_tag.fetch("id") %>"><button class="btn btn-danger"><i class="fas fa-trash"></i></button></a></td>
+            <td class="text-center"><a href="/bookmarks/<%= a_tag.fetch("bookmarkId") %>"><button class="btn btn-success"><i class="fas fa-arrow-right"></i></button></a></td>
           </tr>
         <% end %>
       </tbody>
@@ -48,26 +59,41 @@
   <div class = "row">
     <div class = "col-md-6 offset-3 text-white bg-dark rounded">
       <div class = "text-left mb-3 mt-3">
-        <h4>Other users' positions tagged <%= @tag_name %></h4>
+        <h4>Other users' positions tagged "<%= @tag_name %>"</h4>
       </div>
     </div>
   </div>
 
-  <div class="mt-3 col-md-8 offset-2">
+  <div class="mt-3 col-md-4 offset-4">
     <table class="table table-striped table-dark">
       <thead>
         <tr>
-          <th scope="col">FEN</th>
-          <th scope="col">Pieces</th>
+          <th scope="col">Position</th>
+          <th scope="col">Untag</th>
           <th scope="col">Show details</th>
         </tr>
       </thead>
       <tbody>
         <% @others_matching_tags.each do |a_tag| %>
           <tr>
-            <td><%= a_tag.bookmark.position.fen %></td>
-            <td><%= a_tag.bookmark.position.pieces %></td>
-            <td class="text-center"><a href="/bookmarks/<%= a_tag.bookmark.id %>"><button class="btn btn-success"><i class="fas fa-arrow-right"></i></button></a></td>
+            <td>
+              <table class="chessboardSmall">
+                  <% (0..7).each do |i| %>
+                    <tr class="chessboardSmall">
+                      <% (0..7).each do |j| %>
+                        <td class="chessboardSmall">
+                          <%# if rook render rook, etc. %>
+                          <% if a_tag.fetch("the_board")[i][j] != "blank" %>
+                            <img src="<%= a_tag.fetch("the_images")[i][j] %>" class="pieceSmall">
+                          <% end %>
+                        </td>
+                      <% end %>
+                    </tr>
+                  <% end %>
+                </table>
+            </td>
+            <td class="text-center"><a href="/delete_tag/<%= a_tag.fetch("id") %>"><button class="btn btn-danger"><i class="fas fa-trash"></i></button></a></td>
+            <td class="text-center"><a href="/positions/<%= a_tag.fetch("positionId") %>"><button class="btn btn-success"><i class="fas fa-arrow-right"></i></button></a></td>
           </tr>
         <% end %>
       </tbody>
