--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
     <!-- Load google fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Roboto:ital,wght@0,400;0,700;1,400&display=swap" 
       rel="stylesheet">
-    <link href="/assets/darkstyles.css" rel="stylesheet">
+    <link href="/darkstyles.css" rel="stylesheet">
   </head>
   
   <body>
